--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/Kur0Daisuke/RoastGame#readme",
   "dependencies": {
+    "express": "^4.18.2",
+    "groq-sdk": "^0.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "groq-sdk": "^0.37.0"
+    "dotenv": "^16.3.1"
   }
 }
